# CppTemplate

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
cmake/: LTO.cmake  Sanitizers.cmake  Warnings.cmake
docs/: Doxyfile
